--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,17 @@
 server:
-  port: 9102
+  port: 9101
 spring:   # 服务名称
   application:
-    name: myshop-web
+    name: myshop-user
+  datasource:
+    url: jdbc:mysql://192.168.23.140:3306/springcloud?characterEncoding=UTF8&useSSL=false
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: 123456
+  jpa:
+    show-sql: true # 是否打印sql语句
+    generate-ddl: true # 是否自动建表
+    database: mysql # jpa连接的数据库类型
 eureka:
   client:
     fetch-registry: true # 是否需要从Eureka获取注册信息
@@ -12,10 +21,3 @@ eureka:
   instance:
     # 优先使用该服务的IP地址注册到Eureka，在生产环境建议改为true
     prefer-ip-address: true
-feign:
-  hystrix:
-    enabled: true
-myshop-user:
-  ribbon:
-    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
-
